feat: update product fields, add product category
